# fund-portfolio-bot

./: .env.example  .gitignore  .mcp.json  AGENT.md  AGENTS.md  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: codex-agent.md  gemini-agent.md
.claude/skills/architecture/: SKILL.md
.claude/skills/code-style/: SKILL.md
.claude/skills/dev-workflow/: SKILL.md
.claude/skills/multi-model-orchestrator/: SKILL.md
.zed/: settings.json
data/: trading_calendar_cn_a_2024.csv
docs/: architecture.md  coding-log.md  history-import.md  operations-log.md  python-style.md  roadmap.md  settlement-rules.md  sql-migrations-v0.2.md  sql-migrations-v0.3.md  sql-schema-v0.1.md  sql-schema.md  tooling-draft.md  tooling.md
docs/PRD/: v0.5.0-ai-architecture.md  v0.5.1-react-loop.md
docs/architecture/: architecture-ascii.md  fund-portfolio-architecture.puml
scripts/: backup_db.sh  dev_seed_db.py  import_trading_calendar.py  migrate_v0_2_1_add_delayed_tracking.sql  test_ai_hello.py
src/adapters/datasources/: eastmoney_nav.py  local_nav.py
src/adapters/notify/: discord_report.py
src/ai/: __init__.py  client.py  registry.py
src/ai/prompts/: __init__.py  system.py
src/app/: config.py  main.py  wiring.py
src/cli/: action.py  ai.py  alloc.py  bill.py  calendar.py  confirm.py  dca.py  dca_facts.py  dca_plan.py  fetch_navs.py  fetch_navs_range.py  fund.py  fund_restriction.py  history_import.py  market_value.py  rebalance.py  report.py  trade.py  verify_import.py
src/core/: config.py  container.py  dca_plan.py  dependency.py  fund.py  log.py  policy.py  protocols.py  trade.py
src/flows/: __init__.py  bill_facts.py  bill_import.py  bill_parser.py  calendar.py  config.py  dca.py  dca_backfill.py  dca_infer.py  fund_fees.py  fund_restriction.py  history_import.py  import_verify.py  importer.py  market.py  market_value.py  nav.py  rebalance.py  report.py  trade.py
src/jobs/: confirm_trades.py  daily_report.py  fetch_navs.py  fetch_navs_range.py  patch_calendar.py  run_dca.py  sync_calendar.py
src/usecases/: ports.py
(+72 files in other folders)
