[project]
name = "fund-portfolio-bot"
version = "0.1.0"
description = "Personal fund portfolio management tool"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["T201"]
"src/jobs/*.py" = ["T201"]
"src/adapters/notify/*.py" = ["T201"]
"src/adapters/datasources/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
